--- a/style.css
+++ b/style.css
@@ -45,6 +45,9 @@ header nav a:hover {
 
 .logo {
 	margin-left: 80px;
+	height: 180px;
+	width: 180px;
+	margin-top: 120px;
 }
 
 ul {
@@ -194,9 +197,9 @@ aside{
 	text-align: center;
 }
 
-img {
-	height: 150px;
-	width: 150px;
+img.coruja {
+	height: 400px;
+	width: 400px;
 }
 
 
