--- a/style.css
+++ b/style.css
@@ -1,205 +1,162 @@
-html, body {
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-	background: #fff;
-	width: 100%;
-	height: 100vh;
-	font-family: "Nunito Regular";
+.register-section,
+.creategroup-section {
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 5em 20px 0 20px;
+    padding: 0 calc((100% - 1200px)/2);
 }
 
-/*Alterações da classe container para usar CSS Grid*/
-
-.container{
-	display: grid;
-	grid-template-columns: 2fr 2fr;
-	grid-template-rows: 10vh 80vh 10vh;
-	grid-template-areas: "h h"
-						 "m a"
-						 "f f"
+.register-section__item,
+.creategroup-section__item {
+    flex: 1 1 0;
 }
 
-/*Alterações no header*/
-
-header{
-	grid-area: h;
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	margin-top: 20px;
-	padding: 20px;
+.welcome-info,
+.welcome-sub-info,
+.creategroup-info {
+    flex: 1 1 0;
 }
 
-
-header nav a:hover {
-	color: #fff;
-	background-color: #0b0b31;
-	border-radius: 10px;
+.welcome-info,
+.welcome-sub-info {
+    text-align: center;
+    color: #0b0b31;
+    display: block;
+    font-weight: bold;
+    font-family: 'Nunito', sans-serif;
 }
 
-
-.menu {
-	display: flex;
-	margin-right: 80px;
+.welcome-info {
+    font-size: 1.5em;
+    margin-top: -20px;
+    margin-bottom: 1em;
 }
 
-.logo {
-	margin-left: 80px;
-	height: 180px;
-	width: 180px;
-	margin-top: 120px;
+.welcome-sub-info {
+    font-size: 1.17em;
+    margin-bottom: 1em;
 }
 
-ul {
-	list-style: none;
+.social-login {
+    display: flex;
+    flex-wrap: wrap;
 }
 
-
-
-
-a {
-	padding: 15px;
-	margin: 10px;
-	display: block;
-	text-decoration: none;
-	color: #0b0b31;
-	opacity: 0.8;
-	text-transform: uppercase;
-	cursor: pointer;
+.submit-f {
+    text-align: center;
+    flex: 1 1 200px;
+    color: #fff;
+    background-color: #3b5998;
+    border: 2px solid #fff;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-weight: 700;
+    display: block;
 }
 
-
-
-/*Alterações Main*/
-
-main{
-	grid-area: m;
-	margin-top: 50px;
+.submit-g {
+    flex: 1 1 200px;
+    text-align: center;
+    color: #0b0b31;
+    display: block;
+    background-color: #eae3e3;
+    border: 2px solid #fff;
+    padding: 10px 20px;
+    border-radius: 10px;
+    font-weight: 700;
 }
 
-h1, h3 {
-	text-align: center;
-	color: #0b0b31;
+hr {
+    margin: 2em 0;
 }
 
-h3 {
-	margin-left: 20px;
+.coruja,
+.grupodeestudos {
+    width: 100%;
+    max-width: 400px;
+    display: block;
+    margin: 0 auto;
 }
 
-
-input[type="submit"] {
-	cursor: pointer;
+.estudos {
+    width: 120%;
+    display: block;
+    margin: 0 auto;
 }
 
-
-
-.box {
-	position: absolute;
-	box-sizing: border-box;
-	width: 400px;
-	top: 50%;
-	left: 10%;
+@media(max-width: 740px) {
+    .coruja {
+        display: none;
+    }
+    .estudos {
+        display: none;
+    }
+    .register-section {
+        display: block;
+        margin-top: 2em;
+    }
+    .grupodeestudos {
+        display: none;
+    }
 }
 
-.input-field {
-	position: relative;
-	width: 100%;
-	margin-bottom:23px;
-	margin-top: 10px;
-	border-radius: 5px;
-	padding: 5px;
-
+.categoria {
+    padding: 20px;
+    border: 2px solid gray;
 }
 
-.input-field input {
-	width: 100%;
-	border-radius: 5px;
-	padding: 5px;
-	box-sizing: border-box;
-	border:  none;
-	outline: none;
-	border-bottom: 2px solid #0b0b31;
-	font-size: 16px;
-	color: #0b0b31;
-	font-weight: 700;
+.modal-title {
+    color: black;
 }
 
-.input-field label {
-	top: 0;
-	left: 10px;
-	position: absolute;
-	padding:  5px 0;
-	pointer-events: none;
-	font-size: 16px;
-	color: #0b0b31;
-	font-weight: 700;
-	transition: 0.5s;
+.image-circle {
+    height: 170px;
+    width: 170px;
+    border-radius: 50%;
+    border: 1px solid rgb(204, 204, 204);
 }
 
-hr{
-	margin-left: 20px;
+.position-right {
+    width: 65%;
+    float: right;
+    border: 1px solid rgb(231, 231, 231);
+    border-radius: 4px;
+    padding: 30px;
+    margin-top: 80px;
 }
 
-/*Efeito da microinteração*/
-.input-field input:focus + label,
-.input-field input:valid + label
-{
-top: -25px;
-font-size: 14px;
-padding: 2px 5px;
-background-color: #0b0b31;
-color: #fff;
-border-radius: 5px;
+.position-left {
+    float: left;
 }
 
-
-
-/*Personalizando botões Facebook, Google e Entrar*/
-input.submit-f{
-	color: #fff;
-	background-color: #3b5998;
-	border: 2px solid #fff;
-	padding: 10px 20px;
-	height: 90%;
-	border-radius: 15px;
-	font-weight: 700;
+.mostrarsenha {
+    position: relative;
+    display: block;
+    float: right;
+    cursor: pointer;
+    top: -30px;
+    margin-right: 8px;
 }
 
-input.submit-g{
-	color: #0b0b31;
-	background-color: #eae3e3;
-	border: 2px solid #fff;
-	padding: 10px 20px;
-	height: 90%;
-	border-radius: 15px;
-	font-weight: 700;
+.center {
+    display: block;
+    text-align: center;
+    margin-top: -20px;
 }
 
-input.submit-entrar{
-	color: #fff;
-	background-color: #0b0b31;
-	border: 2px solid #fff;
-	padding: 10px 20px;
-	width: 200px;
-	border-radius: 15px;
+.right {
+    position: relative;
+    display: block;
+    float: right;
 }
 
-
-
-form a {
-	text-align: center;
+.negrito {
+    margin-right: 20px;
+    font-weight: bold;
+    color: #0b0b31;
 }
 
-/*Personalização ASIDE*/
-aside{
-	grid-area: a;
-	margin-top: 50px;
-	text-align: center;
+.negrito:hover {
+    text-decoration: underline;
 }
-
-img.coruja {
-	height: 400px;
-	width: 400px;
-}
-
-
